--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -1,1 +1,10 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<title>At site</title>
+</head>
+<body>
+<h1>In Site</h1>
+</body>
+</html>
